--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  font-family: 'Verdana';
 }
 
 a {
@@ -7,7 +8,7 @@ a {
   color: rgb(116, 238, 136);
   font-style: italic;
   /* font-weight: bold; */
-  font-family: 'Arial';
+  font-family: 'Verdana';
 }
 
 .App {
